--- a/publico/index.html
+++ b/publico/index.html
@@ -3,87 +3,209 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Firmar PDF</title>
+    <title>Firma de Contrato</title>
     <style>
+        /* Estilos generales */
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+            background-color: #f0f6fc;
             margin: 0;
             padding: 0;
             display: flex;
             justify-content: center;
-            align-items: center;
-            height: 100vh;
+            align-items: flex-start; /* Alinea los elementos al principio verticalmente */
+            flex-wrap: wrap;
         }
 
         h1 {
             text-align: center;
+            margin-top: 20px;
             color: #333;
+            width: 100%;
         }
 
         #pdfForm {
+            width: 45%;
+            max-width: 600px;
+            margin: 20px;
+            background-color: #fff;
+            padding: 40px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        #pdfContainer {
+            width: 45%; /* Ancho del contenedor del PDF */
+            margin-left: 20px; /* Espacio a la izquierda del contenedor del PDF */
             display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: 20px;
+            justify-content: center; /* Centra el PDF horizontalmente dentro del contenedor */
+            align-items: center; /* Centra el PDF verticalmente dentro del contenedor */
         }
 
-        button[type="submit"] {
-            padding: 10px 20px;
-            font-size: 16px;
-            background-color: #007bff;
-            color: #fff;
-            border: none;
+        #pdf {
+            width: 100%; /* Haz que el PDF ocupe todo el ancho del contenedor */
+            height: 500px; /* Altura automática para mantener la proporción */
+            border: 1px solid #ccc;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 10px;
+        }
+
+        /* Estilos para campos de formulario */
+        .form-control {
+            margin-bottom: 20px;
+        }
+
+        label {
+            display: block;
+            margin-bottom: 5px;
+            text-transform: uppercase;
+            font-weight: bold;
+        }
+
+        input[type="text"],
+        input[type="email"] {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ccc;
             border-radius: 4px;
+            font-family: "Arial", sans-serif;
+        }
+
+        /* Estilos para botones */
+        button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 12px 24px;
+            border: none;
+            border-radius: 15px;
             cursor: pointer;
-            transition: background-color 0.3s;
+            margin-top: 10px; /* Agrega un margen arriba de los botones */
         }
 
-        button[type="submit"]:hover {
-            background-color: #0056b3;
+        button:hover {
+            background-color: #45a049;
         }
 
+        /* Estilos para el mensaje */
         #message {
             text-align: center;
             margin-top: 20px;
             color: #333;
+            width: 100%;
+        }
+
+        /* Estilos para los botones de Cancelar y Siguiente */
+        #botones-final {
+            width: 100%;
+            text-align: center; /* Centra los botones horizontalmente */
+            margin-top: 20px; /* Espacio arriba de los botones */
+        }
+
+        #cancelar,
+        #siguiente,
+        #firmar {
+            width: 200px; /* Ajusta el ancho de los botones */
+            padding: 15px 30px; /* Ajusta el espacio interno de los botones */
+            font-size: 18px; /* Ajusta el tamaño del texto */
+            margin: 10px; /* Espacio entre los botones */
         }
     </style>
 </head>
 <body>
-    <h1>Firmar PDF</h1>
-    <form id="pdfForm">
-        <button type="submit">Firmar PDF</button>
-    </form>
+    <h1>Firma de Contrato</h1>
+
+    <div id="pdfContainer">
+        <embed id="pdf" src="/publico/Contrato.pdf" type="application/pdf" width="100%" height="600px">
+    </div>
+
+    <div id="pdfForm">
+        <h2>Formulario de Registro</h2>
+        <form id="registroForm">
+            <div class="form-control">
+                <label for="nombre">Nombre Completo:</label>
+                <input type="text" id="nombre" name="nombre" required>
+
+            </div>
+            <div class="form-control">
+                <label for="rut">RUT:</label>
+                <input type="text" id="rut" name="rut" maxlength="12" placeholder="Ejemplo: 12.345.646-8" required>
+            </div>
+            <div class="form-control">
+                <label for="email">Correo Electrónico:</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <button type="button" id="convertirFormulario">Crear Firma</button> 
+            <button type="button" id="firmarDocumento">Firmar Documento</button>
+
+        </form>
+    </div>
+
+    <!-- Botones de Cancelar, Siguiente y Firmar -->
+    <div id="botones-final">
+        <button type="button" id="cancelar">Cancelar</button>
+        <button type="button" id="siguiente">Siguiente</button>
+    </div>
 
     <div id="message"></div>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            const pdfForm = document.getElementById('pdfForm');
-            const messageDiv = document.getElementById('message');
+    const pdfForm = document.getElementById('pdfForm');
+    const messageDiv = document.getElementById('message');
 
-            pdfForm.addEventListener('submit', async (e) => {
-                e.preventDefault();
+    document.getElementById('convertirFormulario').addEventListener('click', async () => {
+        const nombre = document.getElementById('nombre').value;
+        const rut = document.getElementById('rut').value;
+        const email = document.getElementById('email').value;
 
-                try {
-                    const response = await fetch('/firmar-pdf', {
-                        method: 'POST',
-                    });
-
-                    const data = await response.json();
-
-                    if (response.ok) {
-                        messageDiv.textContent = data.message;
-                    } else {
-                        messageDiv.textContent = data.error || 'Error al firmar el PDF';
-                    }
-                } catch (error) {
-                    console.error('Error:', error);
-                    messageDiv.textContent = 'Error al conectar con el servidor';
-                }
+        try {
+            const response = await fetch('http://localhost:3000/formulario', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({ nombre, rut, email })
             });
-        });
+            
+            if (response.ok) {
+                const data = await response.text();
+                messageDiv.textContent = data;
+            } else {
+                const errorMessage = await response.text();
+                messageDiv.textContent = errorMessage || 'Error al procesar el formulario';
+            }
+        } catch (error) {
+            console.error('Error:', error);
+            messageDiv.textContent = 'Error al conectar con el servidor';
+        }
+    });
+
+    document.getElementById('firmarDocumento').addEventListener('click', async () => {
+        try {
+            const response = await fetch('/firmar-pdf', {
+                method: 'POST'
+            });
+            
+            const data = await response.json();
+
+            if (response.ok) {
+                messageDiv.textContent = data.message;
+            } else {
+                messageDiv.textContent = data.error || 'Error al firmar el PDF';
+            }
+        } catch (error) {
+            console.error('Error:', error);
+            messageDiv.textContent = 'Error al conectar con el servidor';
+        }
+    });
+    document.getElementById('siguiente').addEventListener('click', () => {
+                // Cambiar la ubicación de la página
+                window.location.href = 'http://localhost:3000/';
+    });
+});
+
+
+
     </script>
 </body>
 </html>
