--- a/dashboard.html
+++ b/dashboard.html
@@ -51,6 +51,7 @@
         <a href="#home">Home</a>
         <a href="#profile">Profile</a>
         <a href="#settings">Settings</a>
+        <a href="http://localhost:3000/publico/">Documentos a Firmar</a> <!-- Enlace a Documentos a Firmar -->
         <button class="logout-btn" onclick="logout()">Logout</button> <!-- Botón para cerrar sesión -->
     </div>
 
