--- a/publico/index.html
+++ b/publico/index.html
@@ -266,7 +266,7 @@
                 const email = document.getElementById('email').value;
 
                 try {
-                    const response = await fetch('http://localhost:3000/formulario', {
+                    const response = await fetch('http://192.168.222.100:3000/formulario', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json'
@@ -313,7 +313,7 @@
 
             document.getElementById('siguiente').addEventListener('click', () => {
                 // Cambiar la ubicación de la página
-                window.location.href = 'http://localhost:3000/';
+                window.location.href = 'http://192.168.222.100:3000';
             });
         });
     </script>
