--- a/dashboard.html
+++ b/dashboard.html
@@ -49,7 +49,7 @@
 <body>
     <div class="menu">
         <a href="#home">Home</a>
-        <a href="#profile">Profile</a>
+        <a href="http://localhost:3000/perfil">Profile</a>
         <a href="#settings">Settings</a>
         <a href="http://localhost:3000/publico/">Documentos a Firmar</a> <!-- Enlace a Documentos a Firmar -->
         <button class="logout-btn" onclick="logout()">Logout</button> <!-- Botón para cerrar sesión -->
@@ -65,7 +65,7 @@
         // Función para cerrar sesión
         function logout() {
             // Aquí puedes agregar el código para cerrar sesión, por ejemplo, redireccionar a la página de inicio de sesión
-            window.location.href = '/logout';
+            window.location.href = '/login';
         }
     </script>
 </body>
